# HaskellSandbox

./: README.md
Ch10/: database.hs  rewriteFold.hs  scanex.hs  warmUpex.hs
Ch2/: FunctionWithLet.hs  FunctionWithWhere.hs  ch2ex.hs  learn.hs  waxOn.hs  whereEx.hs
Ch3/: GlobalLocal.hs  Print1.hs  Print2.hs  Print3.hs  ch3FuncEx.hs  print3broken.hs  print3flipped.hs  reverse.hs
Ch5/: arith3broken.hs  ch5Ex.hs  sing.hs  tkd1.hs  tkd2.hs  tkd3.hs  tkd4.hs
Ch6/: eqInstance.hs  matchTheTypes.hs  mood.hs  papu.hs  person.hs  sentence.hs  tkd2.hs
Ch7/: arith2.hs  arith4.hs  casePractice.hs  employ.hs  guardDuty.hs  rewriteCode.hs  tupleFunc.hs  user.hs
ch11_17/: ApplicativeIdentity.hs  ConstantApplicative.hs  ListApplicative.hs  Lookups1.hs  applicativeEx.hs  aspattern.hs  bt.hs  cipher.hs  eitherLibrary.hs  eitherVal.hs  farmAnimals.hs  fixerUpper.hs  gardner.hs  heavyLifting.hs  hutton.hs  instanceFunc.hs  jammin.hs  langEx.hs  liftA3Combos.hs  logicGoats.hs  madLib.hs  maybeLibrary.hs  natNum.hs  optional.hs  ospr.hs  palindrome.hs  person2.hs  person3.hs  person5.hs  personSmartConstructor.hs  phone.hs  possibly.hs  replaceExperiment.hs  rewriteFunctor.hs  semigroup.hs  strprocess.hs  unfoldTree.hs  (+6 more)
ch11_17/monoid/: mon.cabal  mon.hs  mon1.hs
ch11_17/monoid/.stack-work/install/x86_64-osx/lts-6.16/7.10.3/lib/x86_64-osx-ghc-7.10.3/mon-0.1.0.0-J8mKw0VvtKWCyxLvCbywqx/: libHSmon-0.1.0.0-J8mKw0VvtKWCyxLvCbywqx-ghc7.10.3.dylib
ch11_17/monoid/.stack-work/install/x86_64-osx/lts-6.16/7.10.3/pkgdb/: mon-0.1.0.0-5ff788c811b446efe7bfb0db0d3a3320.conf  package.cache
(+77 files in other folders)
