--mon.cabal
name: mon
version : 0.1.0.0
license-file: LICENSE
author: Jacob Baumbach
maintainer: jwbaum91@gmail.com
category: Text
build-type: Simple
cabal-version: >=1.10

library
     exposed-modules: Mon
     ghc-options: -Wall -fwarn-tabs
     build-depends: base >=4.7 && <5
                  , QuickCheck, containers
     hs-source-dirs: .
     default-language: Haskell2010